fix: fixes overflow handling, trash bin icon visibility instabilities

--- a/style.css
+++ b/style.css
@@ -39,11 +39,13 @@ p {
 
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
   background: white;
+  padding: 20px 20px 0 20px;
 }
 
 div.container-items {
-  flex-grow: 1;
-  padding: 20px;
+  flex: 1;
+  overflow-y: auto;
+  margin-bottom: 20px;
 }
 
 div.item {
